objects/ssot__FlowElementRun__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CompletedDateTime__c</fullName>
        <label>Completed DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ErrorDescriptionText__c</fullName>
        <label>Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ErrorReason__c</fullName>
        <label>Error Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlowElementId__c</fullName>
        <label>Flow Element</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlowElementRunStatus__c</fullName>
        <label>Flow Element Run Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlowRunId__c</fullName>
        <label>Flow Run</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Flow Element Run Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>[DoNotUse]Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OutcomeId__c</fullName>
        <label>Outcome</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduledDateTime__c</fullName>
        <label>Scheduled DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761222081_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FlowElementRun_FlowRunId_map_FlowRun_rel</label>
        <referenceTo>ssot__FlowRun__dlm</referenceTo>
        <relationshipLabel>FlowElementRun_FlowRunId_map_FlowRun_rel</relationshipLabel>
        <relationshipName>rel_1697761222081_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761222359_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FlowElementRun_FlowElementId_map_Flo_rel</label>
        <referenceTo>ssot__FlowElement__dlm</referenceTo>
        <relationshipLabel>FlowElementRun_FlowElementId_map_Flo_rel</relationshipLabel>
        <relationshipName>rel_1697761222359_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716519564570_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FlowElementRun_OutcomeId_map_FlowEle_rel</label>
        <referenceTo>ssot__FlowElement__dlm</referenceTo>
        <relationshipLabel>FlowElementRun_OutcomeId_map_FlowEle_rel</relationshipLabel>
        <relationshipName>rel_1716519564570_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>